clusters/managed/multimedia/nextcloud/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/app: nextcloud
    gethomepage.dev/group: Productivity
    gethomepage.dev/href: https://drive.trusted.nirmalhk7.com
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=nextcloud"
    gethomepage.dev/icon: nextcloud-blue
    gethomepage.dev/name: Drive
    gethomepage.dev/description: "Nextcloud"
    gethomepage.dev/widget.key: TOKEN
    gethomepage.dev/widget.type: nextcloud
    gethomepage.dev/widget.url: /nextcloud
  name: nextcloud
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`drive.trusted.nirmalhk7.com`)
    services:
    - name: nextcloud
      port: 8080
